src/main/java/com/example/demo/common/error/ApiError.java
package com.example.demo.common.error;

import java.time.Instant;
import java.util.Map;

public record ApiError(
        String code,
        String message,
        Instant timestamp,
        Map<String, String> fieldErrors
) {
}
